2008-Aug-31  yselkowitz

	* lib/pygtk.cygclass: Remove deprecated packages.

	* bin/cygport.in: Tweak argument parser catch-all.

2008-Aug-29  yselkowitz

	* bin/cygport.in:
	bin/prep_libtool_modules.sh:
	lib/aspell-dict.cygclass:
	lib/ebook.cygclass:
	lib/qt3-qmake.cygclass:
	lib/qt4-qmake.cygclass:
	Clean up a number of old FIXMEs.

	* lib/gnome2.cygclass: No need to override localstatedir with rarian.

2008-Aug-28  yselkowitz

	* lib/ruby-gnome2.cygclass (ruby_gnome2_compile, ruby_gnome2_install):
	Enable rdoc generation, using ri docs, not HTML.

	* lib/ruby.cygclass (RI_SITEDIR): Define.
	(ruby_compile, ruby_install) [RDOC_SOURCE]: Build ri docs, not HTML.

	* bin/cygport.in (__oldpatch): Remove long-deprecated function.

	* bin/cygport.in: Allow autotools.cygclass to be manually re-inherit()ed.
	lib/autotools.cygclass: Document this feature.

	* bin/cygport.in (__prepman): Do not compress lzma-compressed manpages.

2008-Aug-27  yselkowitz

	* configure.in: Post-release version bump.

	* Tagged 0.9.1.

	* lib/gst-plugins0.10.cygclass: Update module lists.

	* lib/xorg.cygclass: Drop xorg- prefix from font-* packages.

	* lib/gtk2-perl.cygclass (gtk2_perl_compile):
	man still subs '.' for '::', so we still need to rename the manpages.

	* tests/bootstrap:
	Always run make dist first, unless in distcheck. Clean up after test.

2008-Aug-26  yselkowitz

	* bin/cygport.in (__gpg_verify, __src_prep):
	Only warn about missing gnupg if there is a signature to verify.
	Only verify signatures if existant; don't warn about "missing" sigs.
	Verify signatures in PATCH_URI if existant.
	Catch error if signature verification fails.

	* bin/cygport.in (cygautoreconf, cygconf, src_compile):
	Moved out; auto-inherit autotools instead.
	lib/autotools.cygclass:
	lib/Makefile.am: Added new cygclass for cygautoreconf and cygconf.

	* bin/make_etc_defaults:
	bin/prep_fonts_dir.sh:
	bin/prep_gtk2_modules.sh:
	lib/docbook.cygclass (docbook_sgml_postinst, docbook_sgml_prerm):