@@ -1610,7 +1610,7 @@ __pkg_diff() {
 		*.class *.pyc *.mo *.gmo *.orig *.rej *.spec *.temp *~ *.stackdump";
 
 	case ${PN} in
-		automake*|libtool*) ;;
+		automake*|libtool) ;;
 		*)	default_excludes+=" COPYING INSTALL compile config-ml.in \
 				config.guess config.sub depcomp elisp-comp install-sh \
 				libtool.m4 ltoptions.m4 ltsugar.m4 ltversion.m4 lt~obsolete.m4 \
@@ -1673,7 +1673,7 @@ __pkg_diff() {
 			intltool-merge intltool-merge.in intltool-update intltool-update.in";
 	fi
 
-	# KDE
+	# KDE3
 	if [ -f ${S}/admin/libtool.m4.in ]
 	then
 		default_excludes+=" libtool.m4.in* configure.bak \
