@@ -1,5 +1,13 @@
 2008-Aug-31  yselkowitz
 
+	* bin/cygport.in:
+	lib/berkdb.cygclass (berkdb_autoreconf):
+	lib/cross.cygclass (cross_config_sub):
+	lib/gnome2.cygclass (gnome2_autoreconf):
+	lib/kde3.cygclass (kde3_autoreconf): Remove libtool 1.5 support.
+
+	* bin/prep_libtool_modules.sh: Speed up libtool version detection.
+
 	* lib/pygtk.cygclass: Remove deprecated packages.
 
 	* bin/cygport.in: Tweak argument parser catch-all.
